force-app/main/default/objects/WorkOrder/fields/vlocity_cmt__ExternalWorkOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ExternalWorkOrderNumber__c</fullName>
    <description>Work Order identifier from an external system.</description>
    <externalId>true</externalId>
    <label>External Work Order Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>