force-app/main/default/objects/WorkOrder/fields/vlocity_cmt__ServiceReason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ServiceReason__c</fullName>
    <description>Reason why service is being requested</description>
    <label>Service Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>vlocity_cmt__ServiceType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Downed Power Line</fullName>
            </value>
            <value>
                <fullName>Life Support</fullName>
            </value>
            <value>
                <fullName>Exposed Wiring</fullName>
            </value>
            <value>
                <fullName>Damaged Transformer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Indoor Leak</fullName>
            </value>
            <value>
                <fullName>Outdoor Leak</fullName>
            </value>
            <value>
                <fullName>Solar Panel Installation</fullName>
            </value>
            <value>
                <fullName>Energy Monitor Installation</fullName>
            </value>
            <value>
                <fullName>Other Equipment Installation</fullName>
            </value>
            <value>
                <fullName>Thermostat Installation</fullName>
            </value>
            <value>
                <fullName>New Installation</fullName>
            </value>
            <value>
                <fullName>Reading Discrepancy</fullName>
            </value>
            <value>
                <fullName>Dial Issue</fullName>
            </value>
            <value>
                <fullName>Digital Readout Problem</fullName>
            </value>
            <value>
                <fullName>Potential Meter Exchange</fullName>
            </value>
            <value>
                <fullName>Faulty Meter</fullName>
            </value>
            <value>
                <fullName>Regulatory Swap</fullName>
            </value>
            <value>
                <fullName>Standards Measurement</fullName>
            </value>
            <value>
                <fullName>Smart Meter</fullName>
            </value>
            <value>
                <fullName>Move Meter Within Premises</fullName>
            </value>
            <value>
                <fullName>Move Meter From Inside Out</fullName>
            </value>
            <value>
                <fullName>Move Meter From Outside In</fullName>
            </value>
            <value>
                <fullName>Move Meter Outside Premises</fullName>
            </value>
            <value>
                <fullName>Meter Inside Home</fullName>
            </value>
            <value>
                <fullName>Implausible Reading Check</fullName>
            </value>
            <value>
                <fullName>Vacancy Reconnect</fullName>
            </value>
            <value>
                <fullName>Non-Payment Reconnect</fullName>
            </value>
            <value>
                <fullName>Seasonal Reconnect</fullName>
            </value>
            <value>
                <fullName>Move Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>